# LogPlugin

./: CMakeCache.txt  CMakeCache.txt.prev  CMakeLists.txt  LogCatClient.cpp  LogCatClient.h  LogCatWatcher.cpp  LogCatWatcher.h  LogPlugin.json  LogPlugin.json.in  LogPlugin_resource.rc  LogPlugind_resource.rc  LogPlugins.json.in  Makefile  Makefile.Debug  Makefile.Release  README.md  cmake_install.cmake  logplugin.cpp  logplugin.h  logplugin.pro  logplugin.pro.user.3dc2c72  logplugin.pro.user.5263648  logplugin.pro.user.7c82796.4.9-pre1  logplugin_global.h  logpluginconstants.h  logpluginplugin.cpp  logpluginplugin.h  logplugins.cpp  logplugins.h  logplugins_global.h  logpluginsconstants.h  qtcsettings.cmake
.cmake/api/v1/reply/: cache-v2-773b4289395d0507a708.json  cmakeFiles-v1-beb5276a16549f6a49c9.json  index-2023-09-29T03-03-52-0153.json  (+1 more)
.cmake/api/v1/reply.prev/: cache-v2-bd27096443cb22f2d667.json  codemodel-v2-6321f8cb4c6d5fe1bfbc.json  directory-.-Release-91d93e8ffb906bbef565.json  index-2023-09-25T15-02-33-0242.json  target-LogPlugin_autogen-Release-5cbc0e1a2e5e983e3be2.json
.github/workflows/: build_cmake.yml
LogPlugin_autogen/: mocs_compilation.cpp
LogPlugin_autogen/EWIEGA46WW/: moc_LogCatClient.cpp  moc_LogCatClient.cpp.d  moc_LogCatWatcher.cpp  moc_LogCatWatcher.cpp.d  moc_logplugin.cpp  moc_logplugin.cpp.d
LogPlugin_autogen/include/: LogCatWatcher.moc  LogCatWatcher.moc.d
lib/qtcreator/plugins/: LogPlugin.exp  LogPlugin.lib
release/: LogPlugin_resource.res  moc_LogCatClient.cpp  moc_LogCatWatcher.cpp  moc_logpluginplugin.cpp
